cmake_minimum_required(VERSION 3.2)
project(KAIMyEntitySaba VERSION 2.0)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

set(BULLET_INCLUDE_DIR bullet3/output/include)
set(BULLET_DYNAMICS_LIBRARY BulletDynamics)
set(BULLET_COLLISION_LIBRARY BulletCollision)
set(BULLET_MATH_LIBRARY LinearMath)
set(BULLET_SOFTBODY_LIBRARY BulletSoftBody)
set(BULLET_LIBRARY_DIR bullet3/output/lib)
link_directories(${BULLET_LIBRARY_DIR})

find_package(Bullet REQUIRED)
find_package(JNI REQUIRED)
include_directories(${JAVA_INCLUDE_PATH})
#include_directories(${JAVA_INCLUDE_PATH2})
include_directories(${BULLET_INCLUDE_DIRS})
include_directories(${PROJECT_SOURCE_DIR}/saba/external/tinyobjloader/include)
include_directories(${PROJECT_SOURCE_DIR}/saba/external/tinyxfileloader/include)
include_directories(${PROJECT_SOURCE_DIR}/saba/src)
include_directories(${PROJECT_SOURCE_DIR}/saba/external/spdlog/include)
include_directories(${PROJECT_SOURCE_DIR}/saba/external/glm/include)
include_directories(${PROJECT_SOURCE_DIR}/saba/external/stb/include)
add_subdirectory(saba/src)
add_library(KAIMyEntitySaba SHARED com_kAIS_KAIMyEntity_NativeFunc.cpp KAIMyEntitySaba.cpp)
target_link_libraries(KAIMyEntitySaba PRIVATE ${BULLET_LIBRARIES} Saba)
